--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,7 @@ github_username:  wonda-tea-coffee
 theme: minima
 plugins:
   - jekyll-feed
+  - jekyll-seo-tag
 
 # Exclude from processing.
 # The following items will not be processed, by default.
